Changed property name for verses to 'verse' in MA.7.

--- a/_data/translation/MA_007_en_Worldly_Merit.yaml
+++ b/_data/translation/MA_007_en_Worldly_Merit.yaml
@@ -39,22 +39,22 @@ paragraphs:
   - taishoref: 0
     content: 'At that time, the Bhagavān spoke in verse:'
   - taishoref: 0
-    content: '“The Gaṅgā River
+    verse: '“The Gaṅgā River
     Is clean and easy to cross;
     The ocean with many treasures
     Is the king of myriad rivers.'
   - taishoref: 0
-    content: 'Like a river’s flow,
+    verse: 'Like a river’s flow,
     A worldly person bows low;
     That’s where streams return
     As they go forth into the ocean.'
   - taishoref: 0
-    content: 'Such a person
+    verse: 'Such a person
     Gives clothes, food, and drink;
     Beds, sofas, mats,
     And things upon which to sit.'
   - taishoref: 0
-    content: 'Measureless rewards of merit
+    verse: 'Measureless rewards of merit
     Lead him to a marvelous place;
     He’s like the river’s flow
     Going forth into the ocean.”'
