WIP translation of DA.29.

--- a/_data/translation/DA_29_ch_Lohitya.yaml
+++ b/_data/translation/DA_29_ch_Lohitya.yaml
@@ -3,9 +3,10 @@ number: '二九'
 title: 露遮經
 paragraphs:
   - taishoref: '0112c21'
-    content: '如是我聞：一時，佛在拘薩羅國<sup class="noteref">1</sup>人間遊行，與大比丘眾千二百五十人俱，往詣婆羅婆提婆羅門村北尸舍婆林中止宿。'
+    content: '如是我聞：一時，佛在拘薩羅國<sup class="noteref">1</sup>人間遊行，與大比丘眾千二百五十人俱，往詣娑<sup class="noteref">2</sup>羅婆提婆羅門村北尸舍婆林中止宿。'
     notes:
-      - content: '羅＋（國）【宋】【元】【明】. 國 is added to this transliteration elsewhere in <em>DA</em>, so I’ve emended for consistency.'
+      - content: '羅＋（國）【宋】【元】【明】. 國 is added to this transliteration elsewhere in <em>DA</em>, so I’ve emended the Taisho for consistency.'
+      - content: '婆羅婆提＝娑羅婆提【宋】【明】 There was confusion with this obscure placename transliteration, evidenced by the inconsistency in this sutra, but the majority of older readings give 娑, which supports the reading of Sālavatī. 婆 would yield Valavatī or Balavatī.'
   - taishoref: 0112c23
     content: '時，有婆羅門，名曰露遮，住[＊]婆羅林中，其村豐樂，人民熾盛，[14]波斯匿王即封此村，與婆羅門以為梵分。此婆羅門七世[15]已來父母真正，不為他人之所輕毀，異典三部諷誦通利，種種經書盡能分別，又能善於大人相法、[16]瞻候吉凶、祭祀儀禮。'
   - taishoref: ~0112c23
@@ -34,21 +35,27 @@ paragraphs:
   - taishoref: ~0113b04
     content: '露遮！彼諸弟子語師言：『師今剃除鬚髮，服三法衣，出家修道，於現法中可得除眾煩惱，得上人勝法。而今於現法中不能除煩惱，不得上人勝法。己業未成而為弟子說法，使諸弟子不復恭敬承事供養，但共依止同住而已。』」'
   - taishoref: 0113b16
-    content: '佛言：「露遮！猶如有人壞故獄已，更造新獄，斯則名為貪濁惡法。是為一師可以自誡。是為賢聖戒、律戒、[8]儀戒、時戒。」'
+    content: '佛言：「露遮！猶如有人壞故獄已，更造新獄，斯則名為貪濁惡法。是為一師可以自誡。是為賢聖戒、律戒、儀戒、時戒。」'
   - taishoref: 0113b19
-    content: '又告露遮：「第二師者，剃除鬚髮，服三法衣，出家修道，於現法中可得除眾煩惱，[9]不可增益得上人法，而於現法中不能除眾煩惱，雖復少多得上人勝法，己業未成而為弟子說法，其諸弟子不恭敬承事，由復依止與共同住。'
+    content: '又告露遮：「第二師者，剃除鬚髮，服三法衣，出家修道，於現法中可得除眾煩惱，又<sup class="noteref">1</sup>可增益得上人法，而於現法中不能除眾煩惱，雖復少多得上人勝法，己業未成而為弟子說法，其諸弟子不恭敬承事，由復依止與共同住。'
+    notes:
+      - content: '不＝又【宋】【元】【明】'
   - taishoref: ~0113b19
-    content: '露遮！彼諸弟子語師言：『[10]師今剃除鬚髮，服三法衣，出家修道，於現法中[11]得除眾煩惱，得上人法。而今於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，使諸弟子不復恭敬承事供養，但共依止同住而已。』」'
+    content: '露遮！彼諸弟子語師言：『師今剃除鬚髮，服三法衣，出家修道，於現法中可<sup>1</sup>得除眾煩惱，得上人法。而今於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，使諸弟子不復恭敬承事供養，但共依止同住而已。』」'
+    notes:
+      - content: '得＝可得【宋】【元】【明】'
   - taishoref: 0113b29
-    content: '佛言：「露遮！猶如有人在他後行，手摩他背，此則名為貪濁惡法。是為二師可以自誡。是為賢聖戒、律戒、[＊]儀戒、時戒。」'
+    content: '佛言：「露遮！猶如有人在他後行，手摩他背，此則名為貪濁惡法。是為二師可以自誡。是為賢聖戒、律戒、儀戒、時戒。」'
   - taishoref: 0113c03
-    content: '又告露遮：「第三師者，剃除鬚髮，服三法衣，出家修道，於現法中可除煩惱，又可增益得上人法，而於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，其諸弟子恭敬承事，依止[12]同住。'
+    content: '又告露遮：「第三師者，剃除鬚髮，服三法衣，出家修道，於現法中可除煩惱，又可增益得上人法，而於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，其諸弟子恭敬承事，依止同住。'
   - taishoref: ~0113c03
-    content: '露遮！彼諸弟子語師言：『[＊]師今剃除鬚髮，服三法衣，出家修道，於現法中可得除眾煩惱，少多得上人法，而今於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，諸弟子恭敬承事，共止同住。』」'
+    content: '露遮！彼諸弟子語師言：『師今剃除鬚髮，服三法衣，出家修道，於現法中可得除眾煩惱，少多得上人法，而今於現法中不能除眾煩惱，雖復少多得上人法，己利未成而為弟子說法，諸弟子恭敬承事，共止同住。』」'
   - taishoref: 0113c13
-    content: '佛言：「露遮！猶如有人捨己禾稼，鋤他田苗，此則名為貪濁惡法。是為三師可以自誡。是為賢聖戒、律戒、[＊]儀戒、時戒。露遮！有一世尊不在世間，不可傾動，云何為一？若如來、至真、等正覺出現於世，乃至得三明，除滅無明，生智慧明，去諸闇冥，出大法光，所謂漏盡智證。所以者何？斯由精勤，專念不忘，樂獨閑居之所得也。'
+    content: '佛言：「露遮！猶如有人捨己禾稼，鋤他田苗，此則名為貪濁惡法。是為三師可以自誡。是為賢聖戒、律戒、儀戒、時戒。'
   - taishoref: ~0113c13
-    content: '露遮！是為第一世尊不在世間，不可傾動。露遮！有四沙門果。何者四？謂[13]須陀洹果、[14]斯陀含果、[15]阿那含果、[16]阿羅漢果。云何？露遮！有人聞法應得此四沙門果。若有人遮言：『勿為說法。』設用其言者，彼人聞法得果以不？」'
+    content: '露遮！有一世尊不在世間，不可傾動，云何為一？若如來、至真、等正覺出現於世，乃至得三明，除滅無明，生智慧明，去諸闇冥，出大法光，所謂漏盡智證。所以者何？斯由精勤，專念不忘，樂獨閑居之所得也。露遮！是為第一世尊不在世間，不可傾動。'
+  - taishoref: ~0113c13
+    content: '露遮！有四沙門果。何者四？謂[13]須陀洹果、[14]斯陀含果、[15]阿那含果、[16]阿羅漢果。云何？露遮！有人聞法應得此四沙門果。若有人遮言：『勿為說法。』設用其言者，彼人聞法得果以不？」'
   - taishoref: 0113c25
     content: '答曰：「不得。」'
   - taishoref: 0113c26
@@ -84,15 +91,19 @@ paragraphs:
   - taishoref: 0114a09
     content: '答曰：「不得。」'
   - taishoref: 0114a10
-    content: '又[1]問：「遮他說法，使不得道果，不得生天。彼為是善心，為不善心耶？」'
+    content: '又問：「遮他說法，使不得道果，不得生天。彼為是善心，為不善心耶？」'
   - taishoref: 0114a11
     content: '答曰：「不善。」'
   - taishoref: 0114a12
-    content: '又問：「不善心者，當生善趣，[2]為墮惡道耶？」'
+    content: '又問：「不善心者，為<sup class="">1</sup>生善趣，為墮惡道耶？」'
+    notes:
+      - content: 'The Taisho here has 當 and older readings insert 當 before 墮 to make the verb clauses parallel. I've emended the first 當 to 為 to be consistent with the rest of the text.'
   - taishoref: 0114a13
     content: '答曰：「墮惡道。」'
   - taishoref: 0114a13
-    content: '「露遮！若有人語汝言：『彼[3]波羅婆提[4]村封所有財物。露遮！自用勿給人，物當自用，與他何為？』云何？露遮！設用彼言者，當斷餘人供不？」'
+    content: '「露遮！若有人語汝言：『彼娑<sup>1</sup>羅婆提[4]村封所有財物。露遮！自用勿給人，物當自用，與他何為？』云何？露遮！設用彼言者，當斷餘人供不？」'
+    notes:
+      - content: '波＝娑【宋】【元】【明】 This transliteration makes the most sense.'
   - taishoref: 0114a16
     content: '答曰：「當斷。」'
   - taishoref: 0114a16
