--- a/_data/translation/DA_29_en_Lohitya.yaml
+++ b/_data/translation/DA_29_en_Lohitya.yaml
@@ -29,73 +29,75 @@ paragraphs:
   - taishoref: 0113a26
     content: 'The Buddha told the barber, “This is only a minor matter that’s easily changed.”'
   - taishoref: 0113a27
-    content: 'Then, the Bhagavan arrived at the brahmin’s resdience, prepared a seat, and sat down. The brahmin personally served them various delicious foods, providing it for the Buddha and the samgha. When they finished the meal, they left their bowls and went to wash. They got a small sofa for the Buddha to sit in front. The Buddha then told Lohitya, “Yesterday, not long after you left, you had an evil view: ’Mendicants and brahmins often know the good Dharma, and many of them realize its fulfillment. They shouldn’t teach it for other people. Knowing it themselves, they desist from giving teachings to others. It’s like a man who makes a new hell after he was destroyed in a former hell. This is just a greedy, evil, and unwholesome Dharma!’ Is it true that you said that?”'
+    content: 'Then, the Bhagavan arrived at the brahmin’s resdience, prepared a seat, and sat down. The brahmin personally served them various delicious foods, providing it for the Buddha and the samgha. When they finished the meal, they left their bowls and went to wash. <span class="taishoref">[113b]</span> They got a small sofa for the Buddha to sit in front. The Buddha then told Lohitya, “Yesterday, not long after you left, you had an evil view: ’Mendicants and brahmins often know the good Dharma, and many of them realize its fulfillment. They shouldn’t teach it for other people. Knowing it themselves, they desist from giving teachings to others. It’s like a man who makes a new hell after he was destroyed in a former hell. This is just a greedy, evil, and unwholesome Dharma!’ Is it true that you said that?”'
   - taishoref: 0113b04
     content: 'Lohitya said, “Yes, it’s true that this happened.”'
   - taishoref: 0113b04
-    content: 'The Buddha told Lohitya, “Don’t let this wrong view arise again. Why is that? There are three teachers in the world whom it’s possible admonish yourself. Who are the three? One shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path. Here in the present, he could remove the afflictions, and he could develop and attain a higher human teaching. Here in the present, however, he doesn’t remove the afflictions, and he doesn’t attain a higher human teaching. His work is incomplete, yet he teaches the Dharma for disciples. His disciples don’t respect or serve him. As a result, they have another support and share an abode as equals.'
+    content: 'The Buddha told Lohitya, “Don’t let this wrong view arise again. Why is that? There are three teachers in the world whom it’s possible admonish yourself. Who are the three? One shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path. Here in the present, he could remove the afflictions, and he could develop and attain a higher human teaching. Here in the present, however, he doesn’t remove the afflictions, and he doesn’t attain a higher human teaching. His work is incomplete, yet he teaches the Dharma for disciples. His disciples don’t respect or serve him. As a result, they have another support and share his abode as equals.'
   - taishoref: ~0113b04
-    content: '“Lohitya, those noble disciples say to the teacher, ‘Teacher, now you’ve shaved off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could remove the myriad afflictions and attain a higher human teaching. Here in the present, however, you haven’t removed the afflictions or attained a higher human teaching. Your work is incomplete, yet you teach the Dharma for disciples, which causes your disciples to respect or serve him further. They just share your support and reside here as equals.’”'
+    content: '“Lohitya, those disciples say to the teacher, ‘Teacher, now you’ve shaved off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could remove the myriad afflictions and attain a higher human teaching. Here in the present, however, you aren’t able to remove the afflictions or attain a higher human teaching. Your work is incomplete, yet you teach the Dharma for disciples, which causes your disciples not to respect, serve, or make offerings to you further. They just share your support and reside here as equals.’”'
   - taishoref: 0113b16
-    content: 'The Buddha continued, “Lohitya, just like a man who has destroyed his former prison and then builds a new prison, this is called a greedy, degenerate teaching. This is one teacher whom is possible to admonish yourself, [and it’s the noble precepts, the discipline, the rules of propriety, and the rule of timeliness.]'
+    content: 'The Buddha continued, “Lohitya, like a man who builds a new prison after destroying an old one, this is called a greedy, degenerate teaching. This is one teacher whom it's possible to admonish yourself, [and it’s the noble precepts, the discipline, the rules of propriety, and the rule of timeliness.]'
   - taishoref: 0113b19
-    content: '“The second teacher shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path.'
+    content: '“The second teacher shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path. Here in the present, he could remove the myriad afflictions, and he could develop and attain a higher human teaching. Here in the present, however, he isn’t able to remove the myriad afflictions, although he does attain a little or much of a higher human teaching. His work is incomplete, yet he teaches the Dharma for disciples. His disciples don’t respect or serve him. As a result, they have another support and share his abode as equals.'
   - taishoref: ~0113b19
-    content: 'a'
+    content: '“Lohitya, those disciples say to the teacher, ‘Teacher, now you’ve shaved off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could remove the myriad afflictions and attain a higher human teaching. Here in the present, however, you aren't able to remove the myriad afflictions, although you've attained a little or much of a higher human teaching. Your own benefit is incomplete, yet you teach the Dharma for disciples, which causes your disciples not to respect, serve, or make offerings to you further. They just share your support and reside here as equals.’”'
   - taishoref: 0113b29
-    content: 'a'
+    content: 'The Buddha <span class="taishoref">[113c]</span> continued, “Lohitya, like a man who touches another's back after he turns away, this is called a greedy, degenerate teaching. This is the second teacher whom it's possible to admonish yourself. This is the noble precept, the discipline, the rule of propriety, and the rule of timeliness.'
   - taishoref:  0113c03
-    content: 'a'
+    content: '“A third teacher shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path. Here in the present, he could remove the myriad afflictions, and he could develop a higher human teaching. Here in the present, however, he isn't able to remove the myriad afflictions, although he does attain a little or much of a higher human teaching. His own benefit is incomplete, yet he teaches Dharma for disciples. The disciples respect and serve him, sharing support and dwelling as equals.'
   - taishoref: ~0113c03
-    content: 'a'
+    content: '“Lohitya, those disciples say to the teacher, ‘Teacher, now you’ve shaved off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could remove the myriad afflictions and attain a little or much of a higher human teaching. Here in the present, however, you aren't able to remove the myriad afflictions, although you've attained a little or much of a higher human teaching. Your own benefit is incomplete, yet you teach the Dharma for disciples. Your disciples respect and serve you, sharing support and dwelling as equals.’”'
   - taishoref: 0113c13
-    content: 'a'
+    content: 'The Buddha said, “Lohitya, like a man who plows a field after abandoning his crop, this is a greedy, degenerate teaching. This is the third teacher whom it's possible to admonish yourself. This is the noble precept, the discipline, the rule of propriety, and the rule of timeliness.'
   - taishoref: ~0113c13
-    content: 'a'
+    content: '“Lohitya, there's one Bhagavan who isn't in the world and cannot be shaken. Who is this one? If a Tathāgata, an Arhat, and a Fully and Completely Awakened One appears in the world <span class="abbrev">up to</span> attains three knowledges, eliminates ignorance, gives rise to the radiance of wisdom, and leaves behind darkness, and produces the great light of Dharma, then that is the realization of the knowledge that the contaminants are ended. What is the reason for that? These are attainments that come from diligence, focus, mindfulness, unforgetfulness, and happiness with dwelling alone. Lohitya, this is the first Bhagavan who isn't worldly and unshakable.'
+  - taishoref: ~0113c13
+    content: '“Lohitya, there are four fruits of the mendicant. What are the four? They are the fruit of stream entry, fruit of one more return, fruit of no return, and the fruit of the arhat. How is it, Lohitya? Someone who hears the teaching should attain these four fruits of a mendicant. Suppose someone prohibits it by saying, 'Don't teach the Dharma.' If he were to apply those words, would that person hear the Dharma and attain the fruits by doing so?”'
   - taishoref: 0113c25
-    content: '“They won’t attain it."'
+    content: '“He won’t attain them.”'
   - taishoref: 0113c26
-    content: '“If he doesn’t gain its fruit, does he gain birth in heaven?”'
+    content: '“If he doesn’t attain these fruits, does he attain birth in heaven?”'
   - taishoref: 0113c26
     content: '“He won’t attain it.”'
   - taishoref: 0113c27
-    content: '“He prevents others to teach Dharma, so they won’t attain its fruit and won’t gain birth in heaven. Is that a wholesome or an unwholesome thought?”'
+    content: '“To prohibit others from teaching Dharma causes them to not attain its fruits and not attain birth in heaven. Is that a wholesome or an unwholesome thought?”'
   - taishoref: 0113c28
     content: '“Unwholesome.”'
   - taishoref: 0113c28
     content: '“Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?”'
   - taishoref: 0113c29
-    content: '“Born to an unpleasant destiny.”'
+    content: 'He's born to a bad <span class="taishoref">[114a]</span> destiny.”'
   - taishoref: 0114a01
-    content: 'a'
+    content: '"Lohitya, he's like a man who says to King Prasenajit, 'The country belongs to the king. The wealth in it is entirely for the king's own use. Don't share it with anyone else!' How is it, Lohitya? If he applied that person's words, would the king end the sharing of it with other people?"'
   - taishoref: 0114a03
-    content: '“They’ll stop them.”'
+    content: '“He would stop it.”'
   - taishoref: 0114a04
-    content: 'a'
+    content: 'To stop sharing with others: Is that a wholesome thought or an unwholesome thought?'
   - taishoref: 0114a05
-    content: '“An unwholesome mind.”'
+    content: '“An unwholesome thought.”'
   - taishoref: 0114a05
     content: '“Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?”'
   - taishoref: 0114a06
-    content: '“Fall to an unpleasant destiny.”'
+    content: '“He'll fall to an bad destiny.”'
   - taishoref: 0114a06
-    content: 'a'
+    content: '"Lohitya, he's likewise, someone who hears the Dharma and would attain four fruits of a mendicant. Suppose someone prohibits it by saying, 'Don't teach the Dharma.' If he were to apply those words, would that person hear the Dharma and attain the fruits by doing so?”'
   - taishoref: 0114a08
-    content: '“They won’t attain it.”'
+    content: 'He won’t attain it.”'
   - taishoref: 0114a09
-    content: '“If he doesn’t gain its fruit, does he attain birth in heaven?”'
+    content: '“If he doesn’t gain these fruits, does he attain birth in heaven?”'
   - taishoref: 0114a09
-    content: '“They won’t attain it.”'
+    content: '“He won’t attain it.”'
   - taishoref: 0114a10
-    content: '“He prevents others to teach Dharma, so they won’t attain its fruit and won’t gain birth in heaven. Is that a wholesome or an unwholesome thought?”'
+    content: '“To prohibit others from teaching Dharma causes them to not attain its fruits and not attain birth in heaven. Is that a wholesome or an unwholesome thought?”'
   - taishoref: 0114a11
     content: '“Unwholesome.”'
   - taishoref: 0114a12
     content: '“Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?”'
   - taishoref: 0114a13
-    content: '“Fall to an unpleasant destiny.”'
+    content: '“He'll fall to a bad destiny.”'
   - taishoref: 0114a13
-    content: 'a'
+    content: '"<stopped here>Lohitya, someone were to say to you, 'Sālavatī'"'
   - taishoref: 0114a16
     content: '“They’ll stop them.”'
   - taishoref: 0114a16
@@ -125,4 +127,4 @@ paragraphs:
   - taishoref: 0114a26
     content: 'The brahmin Lohitya then said to the Buddha, “I take refuge in the Buddha, refuge in the Dharma, and refuge in the Samgha. Please permit me to be a laymen in the correct teaching. From this day forward, I will not kill, steal, commit sexual misconduct, lie, or drink alcohol for all my life.”'
   - taishoref: 0114a29
-    content: 'Once the Buddha had taught the Dharma, the brahmin Lohitya heard what the Buddha had taught, rejoiced, and handed it down.'
+    content: 'Once the Buddha had taught the Dharma, the brahmin Lohitya heard what the Buddha had taught, rejoiced, <span class="taishoref">[114b]</span> and handed it down.'
