Added the Agama title to individual translation pages. Worked on EA.1 gathas. Unpublished the EA_01.html file, republished DA_29.html.

--- a/_data/translation/DA_29_ch_Lohitya.yaml
+++ b/_data/translation/DA_29_ch_Lohitya.yaml
@@ -97,7 +97,7 @@ paragraphs:
   - taishoref: 0114a12
     content: '又問：「不善心者，為<sup class="">1</sup>生善趣，為墮惡道耶？」'
     notes:
-      - content: 'The Taisho here has 當 and older readings insert 當 before 墮 to make the verb clauses parallel. I've emended the first 當 to 為 to be consistent with the rest of the text.'
+      - content: 'The Taisho here has 當 and older readings insert 當 before 墮 to make the verb clauses parallel. I’ve emended the first 當 to 為 to be consistent with the rest of the text.'
   - taishoref: 0114a13
     content: '答曰：「墮惡道。」'
   - taishoref: 0114a13
