--- a/_data/translation/DA_29_en_Lohitya.yaml
+++ b/_data/translation/DA_29_en_Lohitya.yaml
@@ -37,23 +37,23 @@ paragraphs:
   - taishoref: ~0113b04
     content: '“Lohitya, those disciples say to the teacher, ‘Teacher, now you’ve shaved off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could remove the myriad afflictions and attain a higher human teaching. Here in the present, however, you aren’t able to remove the afflictions or attain a higher human teaching. Your work is incomplete, yet you teach the Dharma for disciples, which causes your disciples not to respect, serve, or make offerings to you further. They just share your support and reside here as equals.’”'
   - taishoref: 0113b16
-    content: 'The Buddha continued, “Lohitya, like a man who builds a new prison after destroying an old one, this is called a greedy, degenerate teaching. This is one teacher whom it's possible to admonish yourself, [and it’s the noble precepts, the discipline, the rules of propriety, and the rule of timeliness.]'
+    content: 'The Buddha continued, “Lohitya, like a man who builds a new prison after destroying an old one, this is called a greedy, degenerate teaching. This is one teacher whom it’s possible to admonish yourself, [and it’s the noble precepts, the discipline, the rules of propriety, and the rule of timeliness.]'
   - taishoref: 0113b19
     content: '“The second teacher shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path. Here in the present, he could remove the myriad afflictions, and he could develop and attain a higher human teaching. Here in the present, however, he isn’t able to remove the myriad afflictions, although he does attain a little or much of a higher human teaching. His work is incomplete, yet he teaches the Dharma for disciples. His disciples don’t respect or serve him. As a result, they have another support and share his abode as equals.'
   - taishoref: ~0113b19
-    content: '“Lohitya, those disciples say to the teacher, ‘Teacher, now you’ve shaved off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could remove the myriad afflictions and attain a higher human teaching. Here in the present, however, you aren't able to remove the myriad afflictions, although you've attained a little or much of a higher human teaching. Your own benefit is incomplete, yet you teach the Dharma for disciples, which causes your disciples not to respect, serve, or make offerings to you further. They just share your support and reside here as equals.’”'
+    content: '“Lohitya, those disciples say to the teacher, ‘Teacher, now you’ve shaved off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could remove the myriad afflictions and attain a higher human teaching. Here in the present, however, you aren’t able to remove the myriad afflictions, although you’ve attained a little or much of a higher human teaching. Your own benefit is incomplete, yet you teach the Dharma for disciples, which causes your disciples not to respect, serve, or make offerings to you further. They just share your support and reside here as equals.’”'
   - taishoref: 0113b29
-    content: 'The Buddha <span class="taishoref">[113c]</span> continued, “Lohitya, like a man who touches another's back after he turns away, this is called a greedy, degenerate teaching. This is the second teacher whom it's possible to admonish yourself. This is the noble precept, the discipline, the rule of propriety, and the rule of timeliness.'
+    content: 'The Buddha <span class="taishoref">[113c]</span> continued, “Lohitya, like a man who touches another’s back after he turns away, this is called a greedy, degenerate teaching. This is the second teacher whom it’s possible to admonish yourself. This is the noble precept, the discipline, the rule of propriety, and the rule of timeliness.'
   - taishoref:  0113c03
-    content: '“A third teacher shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path. Here in the present, he could remove the myriad afflictions, and he could develop a higher human teaching. Here in the present, however, he isn't able to remove the myriad afflictions, although he does attain a little or much of a higher human teaching. His own benefit is incomplete, yet he teaches Dharma for disciples. The disciples respect and serve him, sharing support and dwelling as equals.'
+    content: '“A third teacher shaves off his hair, wears the three Dharma robes, and leaves home to cultivate the path. Here in the present, he could remove the myriad afflictions, and he could develop a higher human teaching. Here in the present, however, he isn’t able to remove the myriad afflictions, although he does attain a little or much of a higher human teaching. His own benefit is incomplete, yet he teaches Dharma for disciples. The disciples respect and serve him, sharing support and dwelling as equals.'
   - taishoref: ~0113c03
-    content: '“Lohitya, those disciples say to the teacher, ‘Teacher, now you’ve shaved off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could remove the myriad afflictions and attain a little or much of a higher human teaching. Here in the present, however, you aren't able to remove the myriad afflictions, although you've attained a little or much of a higher human teaching. Your own benefit is incomplete, yet you teach the Dharma for disciples. Your disciples respect and serve you, sharing support and dwelling as equals.’”'
+    content: '“Lohitya, those disciples say to the teacher, ‘Teacher, now you’ve shaved off your hair, put on the three Dharma robes, and left home to cultivate the path. Here in the present, you could remove the myriad afflictions and attain a little or much of a higher human teaching. Here in the present, however, you aren’t able to remove the myriad afflictions, although you’ve attained a little or much of a higher human teaching. Your own benefit is incomplete, yet you teach the Dharma for disciples. Your disciples respect and serve you, sharing support and dwelling as equals.’”'
   - taishoref: 0113c13
-    content: 'The Buddha said, “Lohitya, like a man who plows a field after abandoning his crop, this is a greedy, degenerate teaching. This is the third teacher whom it's possible to admonish yourself. This is the noble precept, the discipline, the rule of propriety, and the rule of timeliness.'
+    content: 'The Buddha said, “Lohitya, like a man who plows a field after abandoning his crop, this is a greedy, degenerate teaching. This is the third teacher whom it’s possible to admonish yourself. This is the noble precept, the discipline, the rule of propriety, and the rule of timeliness.'
   - taishoref: ~0113c13
-    content: '“Lohitya, there's one Bhagavan who isn't in the world and cannot be shaken. Who is this one? If a Tathāgata, an Arhat, and a Fully and Completely Awakened One appears in the world <span class="abbrev">up to</span> attains three knowledges, eliminates ignorance, gives rise to the radiance of wisdom, and leaves behind darkness, and produces the great light of Dharma, then that is the realization of the knowledge that the contaminants are ended. What is the reason for that? These are attainments that come from diligence, focus, mindfulness, unforgetfulness, and happiness with dwelling alone. Lohitya, this is the first Bhagavan who isn't worldly and unshakable.'
+    content: '“Lohitya, there’s one Bhagavan who isn’t in the world and cannot be shaken. Who is this one? If a Tathāgata, an Arhat, and a Fully and Completely Awakened One appears in the world <span class="abbrev">up to</span> attains three knowledges, eliminates ignorance, gives rise to the radiance of wisdom, and leaves behind darkness, and produces the great light of Dharma, then that is the realization of the knowledge that the contaminants are ended. What is the reason for that? These are attainments that come from diligence, focus, mindfulness, unforgetfulness, and happiness with dwelling alone. Lohitya, this is the first Bhagavan who isn’t worldly and unshakable.'
   - taishoref: ~0113c13
-    content: '“Lohitya, there are four fruits of the mendicant. What are the four? They are the fruit of stream entry, fruit of one more return, fruit of no return, and the fruit of the arhat. How is it, Lohitya? Someone who hears the teaching should attain these four fruits of a mendicant. Suppose someone prohibits it by saying, 'Don't teach the Dharma.' If he were to apply those words, would that person hear the Dharma and attain the fruits by doing so?”'
+    content: '“Lohitya, there are four fruits of the mendicant. What are the four? They are the fruit of stream entry, fruit of one more return, fruit of no return, and the fruit of the arhat. How is it, Lohitya? Someone who hears the teaching should attain these four fruits of a mendicant. Suppose someone prohibits it by saying, ’Don’t teach the Dharma.’ If he were to apply those words, would that person hear the Dharma and attain the fruits by doing so?”'
   - taishoref: 0113c25
     content: '“He won’t attain them.”'
   - taishoref: 0113c26
@@ -67,9 +67,9 @@ paragraphs:
   - taishoref: 0113c28
     content: '“Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?”'
   - taishoref: 0113c29
-    content: 'He's born to a bad <span class="taishoref">[114a]</span> destiny.”'
+    content: 'He’s born to a bad <span class="taishoref">[114a]</span> destiny.”'
   - taishoref: 0114a01
-    content: '"Lohitya, he's like a man who says to King Prasenajit, 'The country belongs to the king. The wealth in it is entirely for the king's own use. Don't share it with anyone else!' How is it, Lohitya? If he applied that person's words, would the king end the sharing of it with other people?"'
+    content: '"Lohitya, he’s like a man who says to King Prasenajit, ’The country belongs to the king. The wealth in it is entirely for the king’s own use. Don’t share it with anyone else!’ How is it, Lohitya? If he applied that person’s words, would the king end the sharing of it with other people?"'
   - taishoref: 0114a03
     content: '“He would stop it.”'
   - taishoref: 0114a04
@@ -79,9 +79,9 @@ paragraphs:
   - taishoref: 0114a05
     content: '“Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?”'
   - taishoref: 0114a06
-    content: '“He'll fall to an bad destiny.”'
+    content: '“He’ll fall to an bad destiny.”'
   - taishoref: 0114a06
-    content: '"Lohitya, he's likewise, someone who hears the Dharma and would attain four fruits of a mendicant. Suppose someone prohibits it by saying, 'Don't teach the Dharma.' If he were to apply those words, would that person hear the Dharma and attain the fruits by doing so?”'
+    content: '"Lohitya, he’s likewise, someone who hears the Dharma and would attain four fruits of a mendicant. Suppose someone prohibits it by saying, ’Don’t teach the Dharma.’ If he were to apply those words, would that person hear the Dharma and attain the fruits by doing so?”'
   - taishoref: 0114a08
     content: 'He won’t attain it.”'
   - taishoref: 0114a09
@@ -95,9 +95,9 @@ paragraphs:
   - taishoref: 0114a12
     content: '“Is someone with unwholesome thoughts born in good destinies, or do they fall into bad destinies?”'
   - taishoref: 0114a13
-    content: '“He'll fall to a bad destiny.”'
+    content: '“He’ll fall to a bad destiny.”'
   - taishoref: 0114a13
-    content: '"<stopped here>Lohitya, someone were to say to you, 'Sālavatī'"'
+    content: '"<stopped here>Lohitya, someone were to say to you, ’Sālavatī’"'
   - taishoref: 0114a16
     content: '“They’ll stop them.”'
   - taishoref: 0114a16
