--- a/_data/translation/MA_002_ch_Parijata_Tree.yaml
+++ b/_data/translation/MA_002_ch_Parijata_Tree.yaml
@@ -16,7 +16,7 @@ paragraphs:
     content: '復次，三十三天晝度樹已生如鳥喙，是時，三十三天悅樂歡喜，晝度樹不久當開如鉢。'
   - taishoref: '~0422a20'
     content: '復次，三十三天晝度樹已開如鉢，是時，三十三天悅樂歡喜，晝度樹不久當盡敷開。'
-  - taishoref: ''~0422a20''
+  - taishoref: '~0422a20'
     content: '若晝度樹已盡敷開，光所照、色所映、香所熏，周百由延，是時，三十三天於中夏四月，以天五欲功德具足而自娛樂，是謂三十三天於晝度樹下集會娛樂也。'
   - taishoref: '0422b06'
     content: '「如是義，聖弟子亦復爾，思念出家，是時聖弟子名為葉黃，猶三十三天晝度樹葉萎黃也。'
