Made a couple formatting changes to sutra pages, putting a simple footer with attribution and revision dates on it, and adding the data to the yaml files. Converted MA 1 to the new section-paragraph structure.

--- a/_data/translation/DA_29_en_Lohitya.yaml
+++ b/_data/translation/DA_29_en_Lohitya.yaml
@@ -1,6 +1,8 @@
 collection: The Long Discourses
 number: 29
 title: Lohitya
+translator: Charles Patton
+revised: 28 September 2019
 sections:
   - paragraphs:
     - taishoref: '0112c21'
