Converted MA 2 to the new yaml format.

--- a/_data/translation/MA_002_ch_Parijata_Tree.yaml
+++ b/_data/translation/MA_002_ch_Parijata_Tree.yaml
@@ -1,40 +1,58 @@
 collection: 中阿含經
 number: '二'
 title: 晝度樹經
-paragraphs:
-  - taishoref: '0422a19'
-    content: '我聞如是：一時，佛遊舍衛國，在勝林給孤獨園。'
-  - taishoref: '0422a20'
-    content: '爾時，世尊告諸比丘：「若三十三天晝度樹葉萎黃，是時，三十三天悅樂歡喜，晝度樹葉不久當落。'
-  - taishoref: '~0422a20'
-    content: '復次，三十三天晝度樹葉已落，是時，三十三天悅樂歡喜，晝度樹葉不久當還生。'
-  - taishoref: '~0422a20'
-    content: '復次，三十三天晝度樹葉已還生，是時，三十三天悅樂歡喜，晝度樹不久當生網。'
-  - taishoref: '~0422a20'
-    content: '復次，三十三天晝度樹已生網，是時，三十三天悅樂歡喜，晝度樹不久當生如鳥喙。'
-  - taishoref: '~0422a20'
-    content: '復次，三十三天晝度樹已生如鳥喙，是時，三十三天悅樂歡喜，晝度樹不久當開如鉢。'
-  - taishoref: '~0422a20'
-    content: '復次，三十三天晝度樹已開如鉢，是時，三十三天悅樂歡喜，晝度樹不久當盡敷開。'
-  - taishoref: '~0422a20'
-    content: '若晝度樹已盡敷開，光所照、色所映、香所熏，周百由延，是時，三十三天於中夏四月，以天五欲功德具足而自娛樂，是謂三十三天於晝度樹下集會娛樂也。'
-  - taishoref: '0422b06'
-    content: '「如是義，聖弟子亦復爾，思念出家，是時聖弟子名為葉黃，猶三十三天晝度樹葉萎黃也。'
-  - taishoref: '~0422b06'
-    content: '復次，聖弟子剃除鬚髮，著袈裟衣，至信、捨家、無家、學道，是時聖弟子名為葉落，猶三十三天晝度樹葉落也。'
-  - taishoref: '~0422b06'
-    content: '復次，聖弟子離欲、離惡不善之法，有覺、有觀，離生喜樂，得初禪成就遊，是時，聖弟子名葉還生，猶三十三天晝度樹葉還生也。'
-  - taishoref: '~0422b06'
-    content: '復次，聖弟子覺觀已息，內[7]靜、一心，無覺無觀，定生喜樂，得第二禪成就遊，是時，聖弟子名為生網，猶三十三天晝度樹生網也。'
-  - taishoref: '~0422b06'
-    content: '復次，聖弟子離於喜欲，捨無求遊，正念正智而身覺樂，謂聖所說、聖所捨、念、樂住、空，得第三禪成就遊，是時，聖弟子名生如鳥喙，猶三十三天晝度樹如鳥喙也。'
-  - taishoref: '~0422b06'
-    content: '復次，聖弟子樂滅、苦滅，喜憂本已滅，不苦不樂、捨、念、清淨，得第四禪成就遊，是時，聖弟子名生如鉢，猶三十三天晝度樹如鉢也。'
-  - taishoref: '0422b23'
-    content: '「復次，聖弟子諸漏已盡，心解脫、慧解脫，於現法中自知自覺，自作證成就遊，生已盡，梵行已立，所作已辦，不更受有，知如真，是時，聖弟子名盡敷開，猶三十三天晝度樹盡敷開也。'
-  - taishoref: '~0422b23'
-    content: '彼為漏盡阿羅訶比丘，三十三天集在善法正殿，咨嗟稱歎：『某尊弟子於某村邑剃除鬚髮，著袈裟衣，至信、捨家、無家、學道，諸漏已盡，心解脫、慧解脫，於現法中自知自覺，自作證成就遊，生已盡，梵行已立，所作已辦，不更受有，知如真。』'
-  - taishoref: '~0422b23'
-    content: '是謂漏盡阿羅訶共集會也，如三十三天晝度樹下共集會也。」'
-  - taishoref: '0422c06'
-    content: '佛說如是。彼諸比丘聞佛所說，歡喜奉行。'
+sections:
+  - paragraphs:
+    - taishoref: '0422a19'
+      content: '我聞如是：一時，佛遊舍衛國，在勝林給孤獨園。'
+  - paragraphs:
+    - taishoref: '0422a20'
+      content: '爾時，世尊告諸比丘：「若三十三天晝度樹葉萎黃，是時，三十三天悅樂歡喜，晝度樹葉不久當落。'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '復次，三十三天晝度樹葉已落，是時，三十三天悅樂歡喜，晝度樹葉不久當還生。'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '復次，三十三天晝度樹葉已還生，是時，三十三天悅樂歡喜，晝度樹不久當生網。'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '復次，三十三天晝度樹已生網，是時，三十三天悅樂歡喜，晝度樹不久當生如鳥喙。'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '復次，三十三天晝度樹已生如鳥喙，是時，三十三天悅樂歡喜，晝度樹不久當開如鉢。'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '復次，三十三天晝度樹已開如鉢，是時，三十三天悅樂歡喜，晝度樹不久當盡敷開。'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '若晝度樹已盡敷開，光所照、色所映、香所熏，周百由延，是時，三十三天於中夏四月，以天五欲功德具足而自娛樂，是謂三十三天於晝度樹下集會娛樂也。'
+  - paragraphs:
+    - taishoref: '0422b06'
+      content: '「如是義，聖弟子亦復爾，思念出家，是時聖弟子名為葉黃，猶三十三天晝度樹葉萎黃也。'
+  - paragraphs:
+    - taishoref: '~0422b06'
+      content: '復次，聖弟子剃除鬚髮，著袈裟衣，至信、捨家、無家、學道，是時聖弟子名為葉落，猶三十三天晝度樹葉落也。'
+  - paragraphs:
+    - taishoref: '~0422b06'
+      content: '復次，聖弟子離欲、離惡不善之法，有覺、有觀，離生喜樂，得初禪成就遊，是時，聖弟子名葉還生，猶三十三天晝度樹葉還生也。'
+  - paragraphs:
+    - taishoref: '~0422b06'
+      content: '復次，聖弟子覺觀已息，內[7]靜、一心，無覺無觀，定生喜樂，得第二禪成就遊，是時，聖弟子名為生網，猶三十三天晝度樹生網也。'
+  - paragraphs:
+    - taishoref: '~0422b06'
+      content: '復次，聖弟子離於喜欲，捨無求遊，正念正智而身覺樂，謂聖所說、聖所捨、念、樂住、空，得第三禪成就遊，是時，聖弟子名生如鳥喙，猶三十三天晝度樹如鳥喙也。'
+  - paragraphs:
+    - taishoref: '~0422b06'
+      content: '復次，聖弟子樂滅、苦滅，喜憂本已滅，不苦不樂、捨、念、清淨，得第四禪成就遊，是時，聖弟子名生如鉢，猶三十三天晝度樹如鉢也。'
+  - paragraphs:
+    - taishoref: '0422b23'
+      content: '「復次，聖弟子諸漏已盡，心解脫、慧解脫，於現法中自知自覺，自作證成就遊，生已盡，梵行已立，所作已辦，不更受有，知如真，是時，聖弟子名盡敷開，猶三十三天晝度樹盡敷開也。'
+  - paragraphs:
+    - taishoref: '~0422b23'
+      content: '彼為漏盡阿羅訶比丘，三十三天集在善法正殿，咨嗟稱歎：『某尊弟子於某村邑剃除鬚髮，著袈裟衣，至信、捨家、無家、學道，諸漏已盡，心解脫、慧解脫，於現法中自知自覺，自作證成就遊，生已盡，梵行已立，所作已辦，不更受有，知如真。』'
+  - paragraphs:
+    - taishoref: '~0422b23'
+      content: '是謂漏盡阿羅訶共集會也，如三十三天晝度樹下共集會也。」'
+  - paragraphs:
+    - taishoref: '0422c06'
+      content: '佛說如是。彼諸比丘聞佛所說，歡喜奉行。'
