--- a/_data/translation/MA_002_en_Parijata_Tree.yaml
+++ b/_data/translation/MA_002_en_Parijata_Tree.yaml
@@ -1,40 +1,60 @@
 collection: The Middle-Length Discourses
 number: 2
 title: The Pārijāta Tree
-paragraphs:
-  - taishoref: '0422a19'
-    content: 'I have heard thus: One time, the Buddha traveled to the kingdom of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.'
-  - taishoref: '0422a20'
-    content: 'At that time, the Bhagavān addressed the monks: “If the leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree wither and yellow, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s leaves fall.'
-  - taishoref: '~0422a20'
-    content: '“Furthermore, once the leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree have fallen, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s leaves will grow back again.'
-  - taishoref: '~0422a20'
-    content: '“Furthermore, once the leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree have grown back again, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree grows webs [of buds].'
-  - taishoref: '~0422a20'
-    content: '“Furthermore, once the Trāyastriṃśa Heaven’s Pārijāta Tree has grown webs, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s [buds] grow like bird beaks.'
-  - taishoref: '~0422a20'
-    content: '<span class="taishoref">[422b]</span> “Furthermore, once the Trāyastriṃśa Heaven’s Pārijāta Tree has grown [buds] like bird beaks, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s [buds] will open like bowls.'
-  - taishoref: '~0422a20'
-    content: '“Furthermore, once the [buds] of Trāyastriṃśa Heaven’s Pārijāta Tree have opened like bowls, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree will be in full bloom.'
-  - taishoref: '~0422a20'
-    content: '“Once the Pārijāta Tree has fully bloomed, the light that it shines, the colors that it reflects, and the fragrance that it produces have a range of a hundred yojanas. During the four months of summer, the Trāyastriṃśa gods then entertain themselves with the five heavenly pleasures and the virtues with which they are endowed. This is called the festival under the Trāyastriṃśa Heaven’s Pārijāta Tree.'
-  - taishoref: '0422b06'
-    content: '“The meaning of the noble disciple is also so. When he considers leaving home, then the disciple is called ‘leaves turning yellow’ like the withering and yellowing leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree.'
-  - taishoref: '~0422b06'
-    content: '“Furthermore, the noble disciple shaves off his beard and hair, puts on the reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path. The noble disciple then is called ‘falling leaves’ like the leaves falling from the Trāyastriṃśa Heaven’s Pārijāta Tree.'
-  - taishoref: '~0422b06'
-    content: '“Furthermore, the noble disciple parts with desire and parts with evil or unwholesome things. With thought and investigation, this seclusion produces joy and happiness, and he attains the accomplishment of the first meditation. The noble disciple then is called ‘leaves growing back again’ like the leaves growing back on the Trāyastriṃśa Heaven’s Pārijāta Tree.'
-  - taishoref: '~0422b06'
-    content: '“Furthermore, once the noble disciple’s thought and investigation have stopped, he possesses an inner stillness and unified mind without thought or investigation. This concentration produces joy and happiness, and he attains the accomplishment of the second meditation. The noble disciple then is called ‘growing webs [of buds]’ like the Trāyastriṃśa Heaven’s Pārijāta Tree growing webs [of buds].'
-  - taishoref: '~0422b06'
-    content: '“Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness that’s described by the nobles as the noble’s equanimity, mindfulness, happy abode, and emptiness. He attains the accomplishment of the third meditation. The noble disciple then is called ‘growing [buds] like bird beaks’ like the Trāyastriṃśa Heaven’s Pārijāta Tree growing [buds] like bird beaks.'
-  - taishoref: '~0422b06'
-    content: '“Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he attains the accomplishment of the fourth meditation. The noble disciple then is called ‘becoming like a bowl’ like the Trāyastriṃśa Heaven’s Pārijāta Tree [buds] becoming like bowls.'
-  - taishoref: '0422b23'
-    content: '“Furthermore, once the noble disciple’s contaminants have ended, his mind is liberated, and his wisdom is liberated. In the present, he knows and recognizes for himself the accomplishment of self-realization: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ He is no longer subject to existence and knows it as it really is. The noble disciple then is called ‘in full bloom’ like the Trāyastriṃśa Heaven’s Pārijāta Tree in full bloom.'
-  - taishoref: '~0422b23'
-    content: '“He is an arhat monk whose contaminants have ended. The Trāyastriṃśa gods assemble in the Sudharmā Assembly Hall, sigh admiringly, and praise him, ‘Some worthy disciple at some town <span class="taishoref">[422c]</span> shaved off his beard and hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Once his contaminants had ended, his mind was liberated, and his wisdom was liberated. In the present, he knew and recognized for himself the accomplishment of self-realization: “Birth has been ended, the religious practice has been established, and the task has been accomplished.” He is no longer subject to existence and knows is as it really is.’'
-  - taishoref: '~0422b23'
-    content: '“This is called the assembly that coincides with the end of an arhat’s contaminants, which is like the festival held under the Trāyastriṃśa Heaven’s Pārijāta Tree.”'
-  - taishoref: '0422c06'
-    content: 'The Buddha spoke thus. Those monks who heard what the Buddha had taught rejoiced and handed it down.'
+translator: Charles Patton
+revised: 27 May 2019
+sections:
+  - paragraphs:
+    - taishoref: '0422a19'
+      content: 'I have heard thus: One time, the Buddha traveled to the kingdom of Śrāvastī and stayed at Anāthapiṇḍada Park in Jeta Grove.'
+  - paragraphs:
+    - taishoref: '0422a20'
+      content: 'At that time, the Bhagavān addressed the monks: “If the leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree wither and yellow, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s leaves fall.'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '“Furthermore, once the leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree have fallen, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s leaves will grow back again.'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '“Furthermore, once the leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree have grown back again, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree grows webs [of buds].'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '“Furthermore, once the Trāyastriṃśa Heaven’s Pārijāta Tree has grown webs, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s [buds] grow like bird beaks.'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '<span class="taishoref">[422b]</span> “Furthermore, once the Trāyastriṃśa Heaven’s Pārijāta Tree has grown [buds] like bird beaks, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree’s [buds] will open like bowls.'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '“Furthermore, once the [buds] of Trāyastriṃśa Heaven’s Pārijāta Tree have opened like bowls, then the Trāyastriṃśa gods are delighted and rejoice. It won’t be long before the Pārijāta Tree will be in full bloom.'
+  - paragraphs:
+    - taishoref: '~0422a20'
+      content: '“Once the Pārijāta Tree has fully bloomed, the light that it shines, the colors that it reflects, and the fragrance that it produces have a range of a hundred yojanas. During the four months of summer, the Trāyastriṃśa gods then entertain themselves with the five heavenly pleasures and the virtues with which they are endowed. This is called the festival under the Trāyastriṃśa Heaven’s Pārijāta Tree.'
+  - paragraphs:
+    - taishoref: '0422b06'
+      content: '“The meaning of the noble disciple is also so. When he considers leaving home, then the disciple is called ‘leaves turning yellow’ like the withering and yellowing leaves of the Trāyastriṃśa Heaven’s Pārijāta Tree.'
+  - paragraphs:
+    - taishoref: '~0422b06'
+      content: '“Furthermore, the noble disciple shaves off his beard and hair, puts on the reddish-brown robes, becomes faithful, leaves home, goes homeless, and trains on the path. The noble disciple then is called ‘falling leaves’ like the leaves falling from the Trāyastriṃśa Heaven’s Pārijāta Tree.'
+  - paragraphs:
+    - taishoref: '~0422b06'
+      content: '“Furthermore, the noble disciple parts with desire and parts with evil or unwholesome things. With thought and investigation, this seclusion produces joy and happiness, and he attains the accomplishment of the first meditation. The noble disciple then is called ‘leaves growing back again’ like the leaves growing back on the Trāyastriṃśa Heaven’s Pārijāta Tree.'
+  - paragraphs:
+    - taishoref: '~0422b06'
+      content: '“Furthermore, once the noble disciple’s thought and investigation have stopped, he possesses an inner stillness and unified mind without thought or investigation. This concentration produces joy and happiness, and he attains the accomplishment of the second meditation. The noble disciple then is called ‘growing webs [of buds]’ like the Trāyastriṃśa Heaven’s Pārijāta Tree growing webs [of buds].'
+  - paragraphs:
+    - taishoref: '~0422b06'
+      content: '“Furthermore, the noble disciple parts with joy and desire, and he is equanimous without further pursuit. With right mindfulness and right knowledge, he personally experiences the happiness that’s described by the nobles as the noble’s equanimity, mindfulness, happy abode, and emptiness. He attains the accomplishment of the third meditation. The noble disciple then is called ‘growing [buds] like bird beaks’ like the Trāyastriṃśa Heaven’s Pārijāta Tree growing [buds] like bird beaks.'
+  - paragraphs:
+    - taishoref: '~0422b06'
+      content: '“Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he is neither discomforted nor delighted. Equanimous, mindful, and pure, he attains the accomplishment of the fourth meditation. The noble disciple then is called ‘becoming like a bowl’ like the Trāyastriṃśa Heaven’s Pārijāta Tree [buds] becoming like bowls.'
+  - paragraphs:
+    - taishoref: '0422b23'
+      content: '“Furthermore, once the noble disciple’s contaminants have ended, his mind is liberated, and his wisdom is liberated. In the present, he knows and recognizes for himself the accomplishment of self-realization: ‘Birth has been ended, the religious practice has been established, and the task has been accomplished.’ He is no longer subject to existence and knows it as it really is. The noble disciple then is called ‘in full bloom’ like the Trāyastriṃśa Heaven’s Pārijāta Tree in full bloom.'
+  - paragraphs:
+    - taishoref: '~0422b23'
+      content: '“He is an arhat monk whose contaminants have ended. The Trāyastriṃśa gods assemble in the Sudharmā Assembly Hall, sigh admiringly, and praise him, ‘Some worthy disciple at some town <span class="taishoref">[422c]</span> shaved off his beard and hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path. Once his contaminants had ended, his mind was liberated, and his wisdom was liberated. In the present, he knew and recognized for himself the accomplishment of self-realization: “Birth has been ended, the religious practice has been established, and the task has been accomplished.” He is no longer subject to existence and knows is as it really is.’'
+  - paragraphs:
+    - taishoref: '~0422b23'
+      content: '“This is called the assembly that coincides with the end of an arhat’s contaminants, which is like the festival held under the Trāyastriṃśa Heaven’s Pārijāta Tree.”'
+  - paragraphs:
+    - taishoref: '0422c06'
+      content: 'The Buddha spoke thus. Those monks who heard what the Buddha had taught rejoiced and handed it down.'
